fixed: overflow from animation

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -326,6 +326,10 @@
   .card
     width: 48%
     height: 255px
+    &:nth-child(2)
+      order: 1
+    &:last-child
+      order: 2
   .footer
     padding-bottom: 21px
     &__input
@@ -436,7 +440,6 @@
       &--inline
         margin-bottom: 22px
       &--mb-3
-        margin-top: 8px
         margin-bottom: 25px
       &--form
         margin-top: 10px
@@ -479,7 +482,7 @@
   .activities
     padding-top: 38px
     &__card
-      margin-bottom: 20px
+      margin-bottom: 25px
       &:last-child
         margin-bottom: 0
   .card
