--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -18,6 +18,8 @@ ul
 a
   display: inline-block
   text-decoration: none
+input
+  font-family: 'Mulish', sans-serif
 button
   border: none
 .button
